--- a/Styles/styles_auditoria.css
+++ b/Styles/styles_auditoria.css
@@ -63,6 +63,14 @@
     ul.show{
         top: 85px;
     }
+
+    .signin{
+        display: none;
+    }
+
+    .Register{
+        display: none;
+    }
     
    /* Fin Sección Nav */
 
@@ -82,7 +90,14 @@
     height: 22rem;
     gap: 2rem;
     width: 100%;
-    background-image: url("/img/Servicios_integrales/img-header-web.webp");
+    background-image: url("/Prueba_pwc/img/Servicios_integrales/img-header-web.webp");
+}
+
+.contenedor_arriba{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 100%;    
 }
 
 .auditoria_abajo{
@@ -95,6 +110,14 @@
     align-items: center;
     gap: 2rem;
     background-color: #FFB600;
+}
+
+.contenedor_abajo{
+    width: 100%;
+    display: flex;
+    object-fit: contain;
+    flex-direction: column;
+    gap: 2rem;
 }
 
 .audiotoria_arriba h1{
@@ -129,10 +152,77 @@
     width: 100%;
     background-color: white;
     border-radius: .3rem;
-    padding: 5% 2% 5% 2%;
+    padding: 5% 5% 5% 5%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
+.contenedor_label{
+    display: flex;
+    padding: .5rem .5rem .5rem .5rem;
+    gap: .5rem;
+    align-items: center;
+}
 
+.contenedor_input input[type=text], input[type=email], input[type=tel]{
+    width: -webkit-fill-available;
+    border: none;
+    background: #DDDDDD;
+    padding: 1rem;
+    margin-top: 0.5rem;
+    font-size: .8rem;
+}
+
+.contenedor_input select{
+    width: -webkit-fill-available;
+    border: none;
+    background: #DDDDDD;
+    padding: 1rem;
+    margin-top: 0.5rem;
+    font-size: .8rem;
+}
+
+.contenedor_input textarea{
+    width: -webkit-fill-available;
+    border: none;
+    background: #DDDDDD;
+    padding: 1rem;
+    margin-top: 0.5rem;
+    font-size: .8rem;
+}
+
+.contenedor_form input[type=submit]{
+    background-color: #535353;
+    width: -webkit-fill-available;
+    padding: .9rem 0rem .9rem;
+    border: none;
+    color: white;
+}
+
+.contenedor_form input[type=submit]:hover{
+    -webkit-transition-duration: 700ms;
+    -moz-transition-duration: 700ms;
+    -o-transition-duration: 700ms;
+    transition-duration: 700ms;
+    background-color: white;
+    color: #535353;
+    border: 1px solid #535353;
+}
+
+.contenedor_form span{
+    font-size: .9rem;
+}
+
+.contenedor_label label{
+    font-size: .7rem;
+}
+
+.icono_form{
+    width: .8rem;
+}
+
+/* Fin Sección auditorio */
 
    /* Estilos Sección soluciones */
 
@@ -801,6 +891,7 @@ footer a:hover{
     }
 
     .signin{
+        display: flex;
         width: 45%;
         padding: .9rem 0rem .9rem;
         color: white;
@@ -810,6 +901,7 @@ footer a:hover{
     }
 
     .Register{
+        display: flex;
         background-color: #D04A02;
         width: 45%;
         padding: .9rem 0rem .9rem;
@@ -913,6 +1005,86 @@ footer a:hover{
 
 
    /* Fin Sección soluciones */
+
+   /* Inicio Sección auditoria */
+
+    .auditoria{
+
+    }
+
+    .audiotoria_arriba{
+        align-items: start;
+        height: 22rem;
+    }
+
+    .contenedor_arriba{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        width: 35%;    
+    }
+
+    .contenedor_abajo{
+        width: 35%;
+        display: flex;
+        object-fit: contain;
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .auditoria_abajo{
+        align-items: start;
+        gap: 2rem;
+        position: relative;
+    }
+
+    .audiotoria_arriba h1{
+
+    }
+    .audiotoria_arriba p{
+    }
+
+    .auditoria_abajo h2{
+    }
+
+    .auditoria_abajo img{
+        display: flex;
+        width: 25rem;
+        height: 20rem;
+        object-fit: cover;
+    }
+    .auditoria_abajo p:nth-child(2){
+    }
+
+    .contenedor_form{
+        position: absolute;
+        top: -30vw;
+        right: 10vw;
+        width: 45%;
+        padding: 4% 2% 2% 2%;
+    }
+    .contenedor_label{
+    }
+    .contenedor_input input[type=text], input[type=email], input[type=tel]{
+    }
+    .contenedor_input select{
+    }
+    .contenedor_input textarea{
+    }
+    .contenedor_form input[type=submit]{
+    }
+    .contenedor_form input[type=submit]:hover{
+    }
+    .contenedor_form span{
+        font-size: .8rem;
+    }
+    .contenedor_label label{
+    }
+    .icono_form{
+
+    }
+
+/* Fin Sección auditorio */
 
    /* Estilos Sección Conocimientos */
 
