--- a/Styles/styles_auditoria.css
+++ b/Styles/styles_auditoria.css
@@ -1061,6 +1061,7 @@ footer a:hover{
         top: -30vw;
         right: 10vw;
         width: 45%;
+        max-width: 511px;
         padding: 4% 2% 2% 2%;
     }
     .contenedor_label{
